# gauture

./: .gitignore  README.md
GtLabel/: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Gzjump.cpp  config.ini  main.cpp
GtLabel/UI/: CMakeLists.txt  FrameLessView.cpp  FrameLessView.h  Login.cpp  Login.h  Main.qml  Titlebar.qml
GtLabel/UI/DataAnnotation/: CMakeLists.txt  DataAnnotation.qml  DatatypeModel.cpp  DatatypeModel.h  ImgView.qml  LabelImgData.cpp  LabelImgData.h  LabelTags.cpp  LabelTags.h  RightPane.qml  TagPane.qml  TaskInfo.qml  TaskInfoItem.cpp  TaskInfoItem.h  TaskInfoModel.cpp  TaskInfoModel.h  componentCreationTagPane.js
GtLabel/UI/common/: ButtonComplex.qml  ButtonImg.qml  ButtonImgText.qml  ButtonText.qml  GCombox.qml  GMessageBox.qml  GProgressBar.qml
GtLabel/UI/qss/: login.qss
GtLabel/core/: CMakeLists.txt
GtLabel/core/common/: CMakeLists.txt  Utils.cpp  Utils.h
GtLabel/core/logging/: CMakeLists.txt  log.cpp  log.h
GtLabel/core/logging/demo/: demo_log.cpp
GtLabel/core/protocol/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  WebscoketClient.cpp  WebscoketClient.h
GtLabel/core/protocol/demo/: CMakeLists.txt  main.cpp
GtLabel/node/: Dockerfile  GzLabel.sql  docker-compose.yml  nginx.conf  package-lock.json  package.json  server.js  webscoket.js
GtLabel/node/config/: dbConfig.js
GtLabel/node/controlllers/: labTaskContorller.js  otherContorller.js  tagsContorller.js  userContorller.js
GtLabel/node/logging/: logging.js
GtLabel/node/models/: GrainTypeModel.js  db.js  labTaskModel.js  tagsModel.js  userModel.js
GtLabel/node/pack/: GzLabel.sql
GtLabel/node/routes/: GrianTyoeRouter.js  labTaskRouter.js  tagsRouter.js  userRouter.js
GtLabel/pack/: GzLabel.desktop  Gzupdate.sh  appGtLabel.desktop  config.ini  pack.sh
GtLabel/pack/DEBIAN/: changelog  control  copyright  postinst  postrm  preinst  prerm
GtLabel/update/: CMakeLists.txt  Updater.cpp  Updater.h  main.cpp  rce.qrc
GtLabel/update/resources/: update.qss
GtLabel/update/zip/: CMakeLists.txt
GtLabel/vue/GtLabelManageer/: .env.development  .env.production  .env.test  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
GtLabel/vue/GtLabelManageer/src/: App.vue  main.ts  setting.ts
GtLabel/vue/GtLabelManageer/src/api/user/: index.ts
GtLabel/vue/GtLabelManageer/src/components/: index.ts
GtLabel/vue/GtLabelManageer/src/layout/: index.vue
GtLabel/vue/GtLabelManageer/src/layout/logo/: index.vue
GtLabel/vue/GtLabelManageer/src/layout/tabbar/: index.vue
GtLabel/vue/GtLabelManageer/src/router/: router.ts
GtLabel/vue/GtLabelManageer/src/store/modules/: user.ts
GtLabel/vue/GtLabelManageer/src/utils/: request.ts
GtLabel/vue/GtLabelManageer/src/views/home/: index.vue
GtLabel/vue/GtLabelManageer/src/views/labconfig/firstOrderTag/: index.vue
GtLabel/vue/GtLabelManageer/src/views/labconfig/graintype/: index.vue
GtLabel/vue/GtLabelManageer/src/views/labconfig/secOrderTag/: index.vue
GtLabel/vue/GtLabelManageer/src/views/labconfig/toplevel/: index.vue
GtLabel/vue/GtLabelManageer/src/views/login/: index.vue
GtLabel/vue/GtLabelManageer/src/views/screen/components/couter/: index.vue
GtLabel/vue/GtLabelManageer/src/views/screen/components/line/: index.vue
GtLabel/vue/GtLabelManageer/src/views/screen/components/top/: index.vue
GtLabel/vue/GtLabelManageer/src/views/user/: index.vue
node/: Dockerfile  Dockerfile.frontend  GzLabel.sql  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json
node/controlllers/: GrainTypeContorller.js  labTaskContorller.js  otherContorller.js  tagsContorller.js  userContorller.js
node/logging/: logging.js
node/models/: db.js  labTaskModel.js  userModel.js
node/routes/: otherRouter.js
vue/GtLabelManageer/: .env.development  package-lock.json  package.json  permission.ts  tsconfig.app.json  tsconfig.json
vue/GtLabelManageer/src/: main.ts  setting.ts
vue/GtLabelManageer/src/api/graintype/: index.ts
vue/GtLabelManageer/src/api/tags/: index.ts
vue/GtLabelManageer/src/api/user/: type.ts
vue/GtLabelManageer/src/router/: index.ts
vue/GtLabelManageer/src/store/: index.ts
vue/GtLabelManageer/src/store/modules/: setting.ts
vue/GtLabelManageer/src/views/labconfig/graintype/: index.vue
vue/GtLabelManageer/src/views/labconfig/secOrderTag/: index.vue
vue/GtLabelManageer/src/views/screen/: index.vue
vue/GtLabelManageer/src/views/screen/components/age/: index.vue
vue/GtLabelManageer/src/views/screen/components/couter/: index.vue
vue/GtLabelManageer/src/views/screen/components/rank/: index.vue
vue/GtLabelManageer/src/views/screen/components/sex/: index.vue
vue/GtLabelManageer/src/views/screen/components/tourist/: index.vue
vue/GtLabelManageer/src/views/screen/components/year/: index.vue
vue/GtLabelManageer/src/views/user/: index.vue
